fix: remove the border (was distorted on the mobile view), change default theme back to light.

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -148,10 +148,10 @@
 
   body {
     @apply bg-background text-foreground;
-    box-shadow: inset 0 0 100px rgba(0,0,0,0.05);
+    /* box-shadow: inset 0 0 100px rgba(0,0,0,0.05); */
   }
   
-  body::after {
+  /* body::after {
     content: "";
     position: fixed;
     top: 24px;
@@ -162,7 +162,7 @@
     pointer-events: none;
     z-index: 100;
     opacity: 0.4;
-  }
+  } */
 
   /**
   * Default typography styles for HTML elements (h1-h4, p, label, button, input).
